# Awesome_Agent_Rag_LMMs_apps

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
advanced_llm_apps/chat-with-tarots/: app.py
advanced_llm_apps/cursor_ai_experiments/: ai_web_scrapper.py  chatgpt_clone_llama3.py  multi_agent_researcher.py
advanced_llm_apps/gpt_oss_critique_improvement_loop/: README.md  requirements.txt  streamlit_app.py
advanced_llm_apps/thinkpath_chatbot_app/: index.html  main.js
mcp_ai_agents/ai_travel_planner_mcp_agent_team/: README.md  app.py  requirements.txt
mcp_ai_agents/browser_mcp_agent/: README.md  main.py
mcp_ai_agents/github_mcp_agent/: README.md  github_agent.py  requirements.txt
mcp_ai_agents/multi_mcp_agent/: README.md  multi_mcp_agent.py
mcp_ai_agents/notion_mcp_agent/: notion_mcp_agent.py  requirements.txt
rag_tutorials/agentic_rag_embedding_gemma/: README.md  requirements.txt
rag_tutorials/agentic_rag_with_reasoning/: README.md  rag_reasoning_agent.py
rag_tutorials/ai_blog_search/: README.md  app.py
rag_tutorials/autonomous_rag/: README.md
rag_tutorials/contextualai_rag_agent/: README.md  requirements.txt
rag_tutorials/corrective_rag/: README.md
rag_tutorials/deepseek_local_rag_agent/: README.md  deepseek_rag_agent.py
rag_tutorials/gemini_agentic_rag/: README.md  agentic_rag_gemini.py
rag_tutorials/hybrid_search_rag/: README.md
rag_tutorials/llama3.1_local_rag/: README.md
rag_tutorials/local_hybrid_search_rag/: README.md
rag_tutorials/local_rag_agent/: README.md  requirements.txt
rag_tutorials/rag_chain/: README.md  (+1 more)
(+274 files in other folders)
